<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questionnaire_Activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <LinearLayout
            android:id="@+id/top1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.167"
                app:srcCompat="?android:attr/actionModeFindDrawable" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:accessibilityHeading="false"
                android:background="#00C3C3C3"
                android:fontFamily="sans-serif"
                android:text="@string/question"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#646464"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.792"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.868" />
        </LinearLayout>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_below="@id/top1"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/selectButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="click_answer_1"
                android:text="@string/answer_app"
                android:textColorHighlight="#6200ED"
                android:textColorLink="#6200ED" />

            <RadioButton
                android:id="@+id/selectButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="click_answer_2"
                android:text="@string/answer_location"
                android:textColorHighlight="#6200ED"
                android:textColorLink="#6200ED" />

            <RadioButton
                android:id="@+id/selectButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click_answer_3"
                android:text="@string/answer_noise"
                android:textColorHighlight="#6200ED"
                android:textColorLink="#6200ED" />

            <RadioButton
                android:id="@+id/selectButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="click_answer_4"
                android:text="@string/answer_device"
                android:textColorHighlight="#6200ED"
                android:textColorLink="#6200ED" />

            <RadioButton
                android:id="@+id/selectButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="click_answer_5"
                android:text="@string/answer_others"
                android:textColorHighlight="#6200ED"
                android:textColorLink="#6200ED" />

        </RadioGroup>

        <Button
            android:id="@+id/button5"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:onClick="launchSecondActivity"
            android:text="@string/upload_answer"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/radioGroup" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_above="@+id/textView6"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="1dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="278dp"
            android:layout_height="51dp"
            android:layout_above="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="1dp"
            android:text="本问卷用于之后更好地为您提供个性化服务，感谢您的配合！"
            android:textAlignment="center"
            app:layout_constraintVertical_bias="0.005" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="134dp"
            android:layout_height="89dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="logo"
            app:srcCompat="@drawable/ivolume_logo" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>